Components: Fix breadcrumbs scrollbar.

--- a/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -2,6 +2,7 @@
 
 .Breadcrumbs {
     overflow-x: auto;
+    overflow-y: hidden;
     display: flex;
     justify-content: space-between;
     align-items: center;
